# bias-ext-emoji

./: extension.json  pyproject.toml
bias_ext_emoji.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bias_ext_emoji/backend/: apps.py  ext.py  extenders.py  formatter.py  tests.py
frontend/forum/: ComposerEmojiAutocomplete.vue  ComposerEmojiPicker.vue  emojiData.js  index.js  nodeSdk.js  sdk.d.ts  sdk.js  twemoji.js
locale/: zh-CN.json
